// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelayRelayDirectiveTransform matches expected output: plural-fragment.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment PluralFragment on User @relay(plural: true) {
  name
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "kind": "Fragment",
  "directives": [],
  "metadata": {
    "plural": true
  },
  "name": "PluralFragment",
  "selections": [
    {
      "kind": "ScalarField",
      "alias": null,
      "args": [],
      "directives": [],
      "metadata": null,
      "name": "name",
      "type": "String"
    }
  ],
  "type": "User",
  "argumentDefinitions": []
}
`;

exports[`RelayRelayDirectiveTransform matches expected output: unmasked-spread.graphql 1`] = `
~~~~~~~~~~ INPUT ~~~~~~~~~~
fragment UserProfile on User {
  profilePicture {
    ...PhotoFragment @relay(mask: false)
  }
}

~~~~~~~~~~ OUTPUT ~~~~~~~~~~
{
  "kind": "Fragment",
  "directives": [],
  "metadata": null,
  "name": "UserProfile",
  "selections": [
    {
      "kind": "LinkedField",
      "alias": null,
      "args": [],
      "directives": [],
      "metadata": null,
      "name": "profilePicture",
      "selections": [
        {
          "kind": "FragmentSpread",
          "args": [],
          "metadata": {
            "mask": false
          },
          "name": "PhotoFragment",
          "directives": []
        }
      ],
      "type": "Image"
    }
  ],
  "type": "User",
  "argumentDefinitions": []
}
`;
